--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node fileJS/index.js",
-    "dev": "nodemon  src/index.ts"
+    "dev": "nodemon  src/index.ts",
+    "swagger": "node ./swagger/swagger.js"
   },
   "keywords": [],
   "author": "",
@@ -13,13 +14,26 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.20.0"
+    "express": "^4.20.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.5.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "prisma": "^5.19.1",
+    "swagger-autogen": "^2.23.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
