--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "prisma generate && npx tsc",
     "start": "node fileJS/index.js",
-    "dev": "nodemon  src/index.ts",
+    "dev": "nodemon  index.ts",
     "swagger": "node ./swagger/swagger.js",
     "postinstall": "prisma generate"
   },
